--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.sf</groupId>
-    <artifactId>jsignpdf</artifactId>
+    <artifactId>jsignpdf2</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
@@ -30,4 +30,17 @@
             <version>1.3.2</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
